<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".activities.fragments.CharactersFragment">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="460dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="115dp">

            <ImageView
                android:id="@+id/logoSetting"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/back_img_settings"
                android:src="@drawable/settings_logo" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/generalConfigurations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_settings"
            android:layout_marginBottom="190dp"

            >

            <ImageView
                android:id="@+id/icon8"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="336dp"
                android:layout_toStartOf="@+id/NameMode"
                android:src="@drawable/ic_name" />

            <ImageView
                android:id="@+id/icon7"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="336dp"
                android:layout_toStartOf="@+id/NigthMode"
                android:src="@drawable/ic_baseline_dark_mode_24" />

            <ImageView
                android:id="@+id/icon6"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="142dp"
                android:layout_marginEnd="336dp"
                android:layout_marginBottom="155dp"
                android:layout_toStartOf="@+id/Phone"
                android:src="@drawable/ic_baseline_translate_24" />

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="202dp"
                android:layout_marginEnd="336dp"
                android:layout_marginBottom="155dp"
                android:layout_toStartOf="@+id/Notifications"
                android:src="@drawable/ic_baseline_notifications_active_24" />

            <TextView
                android:id="@+id/NigthMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="140dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/icon2"
                android:letterSpacing=".14"
                android:paddingVertical="8dp"
                android:text="@string/Nigth_Mode"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NameMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="200dp"
                android:layout_toStartOf="@+id/icon1"
                android:letterSpacing=".14"
                android:paddingVertical="8dp"
                android:text="@string/Name_Perfil"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="80dp"
                android:layout_toStartOf="@+id/icon4"
                android:letterSpacing=".14"
                android:paddingVertical="8dp"
                android:text="@string/Translate"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Notifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="70dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toStartOf="@+id/icon3"
                android:letterSpacing=".14"
                android:paddingVertical="8dp"
                android:text="@string/Notifications"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/back_img_settings"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/back_img_settings"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="155dp"
                android:background="@drawable/back_img_settings"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="155dp"
                android:background="@drawable/back_img_settings"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="445dp"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/back_settings">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="-60dp"
                android:layout_marginBottom="20dp"
                android:layout_toStartOf="@+id/textview8"
                android:src="@drawable/img_1" />

            <TextView
                android:id="@+id/textview8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/switch1"
                android:letterSpacing=".14"
                android:paddingVertical="15dp"
                android:text="Facebook"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/back_img_settings" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="535dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="20dp"

            >

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/bottonsumbit"
                android:letterSpacing=".14"
                android:text="@string/Logout"
                android:textSize="10dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </FrameLayout>
</layout>